# circuitrubric-bench

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE-CC-BY-4.0.txt  NOTICE.md  README.md  models.example.yaml  pyproject.toml  system_prompts.yaml
circuitrubric/: __init__.py  backends.py  cli.py  grader.py  graph.py  netlist.py  ratio.py  runner.py  task.py
docs/: CATALOG.md  README.md  code-guide.md  full_corpus.md  methodology.md  reasoning-control.md  reproducing.md
docs/results/: all_results.csv  clean_design_leaderboard.md  cost.md  findings.md  fixture_difficulty.md  fixture_success_matrix.md  leaderboard.md  reasoning-ablation.md  reproducibility.md  variance.md
examples/: README.md
examples/lb-qwen3.5-short-strict_ports/: config.json  summary.jsonl
examples/or-gpt-5.5-closed-short-strict_ports/: config.json  summary.jsonl
examples/or-kimi-k2.6-2026-short-strict_ports/: config.json  summary.jsonl
fixtures/001_5t_ota_nmos/: meta.yaml  prompts.yaml  ratio_groups.yaml  reference.cir
fixtures/002_5t_ota_pmos/: meta.yaml  prompts.yaml  ratio_groups.yaml  reference.cir
fixtures/003_nmos_mirror_1to1/: meta.yaml  prompts.yaml  ratio_groups.yaml  reference.cir
fixtures/004_nmos_mirror_1to8/: meta.yaml  prompts.yaml  ratio_groups.yaml  reference.cir
fixtures/005_pmos_mirror_1to1/: meta.yaml  prompts.yaml  ratio_groups.yaml  (+1 more)
scripts/: aggregate_runs.py  diagnose.py  full_corpus.py  openrouter_sweep.sh  validate_fixtures.py
tests/: test_grader.py  test_graph.py  test_netlist.py  test_ratio.py  test_runner.py  test_sd_equivalence.py  test_task.py
(+809 files in other folders)
